Added more details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,60 @@
         <div class="site-header-content">
             <h1>Hi, I am Aditya Mukherjee, I am 29 years old, living in Varanasi India</h1>
             <h3>I am learning full stack web development</h3>
-            <h5>If you want to follow me at <a class="github-link" href="https://github.com/amukherjee01">GitHub</a></h5>
+            <h2>Software Developer (Cisive)</h2>
+            <hr>
+            <ul>
+                <li>Working as a part of onboarding solution and background screening team. The software helps companies to hire applicants and perform all the necessary background checks (Pre-checks & Post-checks)
+                Background checks involves criminal checks, drug test, fingerprint, address verification, MVR, employment and education, SSN.
+                </li>
+                <li>
+                    Background checks involves criminal checks, drug test, fingerprint, address verification, MVR, employment and education, SSN.
+                </li>
+                <li>
+                    Worked on various API integration project with third party vendor such as SJV and WSS. Also helped in improving system stability and performance by caching rule and property specific table using c#.
+                </li>
+            </ul>
+            <h2>Software Developer (CGS)</h2>
+            <hr>
+            <ul>
+                <li>
+                    Working as part of a team developing & supporting modules of an application related to the Apparel / Footwear Domain. The application helps in keeping a live track of the inventory.
+                </li>
+                <li>
+                    Have developed / supported modules related to Accounts, EDI, Production, Inventory, etc. Also worked on developing a module which supports E-Commerce sites like Shopify, Amazon, Magento, etc.
+                </li>
+            </ul>
+            <h2>Languages and Technologies</h2>
+            <hr>
+            <ul>
+                <li>
+                    Programming Languages - Python3, C#, C, C++, JavaScript, Typescript.
+                </li>
+                <li>
+                    Database - SQL Server, MySQL, Mongo Db
+                </li>
+                <li>
+                    Frameworks and tools – Django, Django Rest Framework, Nodejs, ExpressJs, Angular 14, HTML, CSS, Bootstrap.
+                </li>
+                <li>
+                    Version control system : Git
+                </li>
+            </ul>
+            <h2>Project</h2>
+            <hr>
+            <ul>
+                <li>
+                    Web based blog application using Python and Django
+                </li>
+                <li>
+                    Django full stack E-Commerce website with features such as add to cart, checkout, place order, view all products, view products based on category, register new customer, login, logout, send email notification, session management etc.
+                </li>
+                <li>
+                    Django based full stack application name ‘Tubers’. The application helps to hire youtubers for promotional activity. It involves Tuber model (all the details of the youtubers like city, price, category, solo/team, YouTube link, etc.) and tuber request model (Customer who request for the youtuber). 
+                </li>
+            </ul>
+
+            <h5 style="text-align: center;">If you want to follow me at <a class="github-link" href="https://github.com/amukherjee01">GitHub</a></h5>
         </div>
 
     </header>
