fix employment details

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <h2>Software Developer (Cisive)</h2>
             <hr>
             <ul>
-                <li>Working as a part of onboarding solution and background screening team. The software helps companies to hire applicants and perform all the necessary background checks (Pre-checks & Post-checks)
-                Background checks involves criminal checks, drug test, fingerprint, address verification, MVR, employment and education, SSN.
+                <li>Working as a part of onboarding solution and background screening team. The software helps companies to hire applicants and perform all the necessary background checks (Pre-checks & Post-checks).
                 </li>
                 <li>
                     Background checks involves criminal checks, drug test, fingerprint, address verification, MVR, employment and education, SSN.
