--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://scontent.fdel8-1.fna.fbcdn.net/v/t1.18169-9/983602_486649914737158_1372829212_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=ba80b0&_nc_ohc=_xOpPazZvmkAX9hQ-bn&_nc_ht=scontent.fdel8-1.fna&oh=00_AfDq4sCPKhd2AUDEBGFlM3erQqBjN9y2W8S0jS6r2Yxr5Q&oe=63E1AD31">
+    <meta property="og:title" content="Aditya Mukherjee">
+    <meta property="og:description" content="Software Engineer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://adityamukherjee.netlify.app/">
     <link rel="stylesheet" href="./css/style.css">
     <title>Aditya Mukherjee</title>
 </head>
