--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://adityamukherjee.netlify.app/">
     <link rel="stylesheet" href="./css/style.css">
     <title>Aditya Mukherjee</title>
+    <link  rel="icon" href="https://cdn-icons-png.flaticon.com/512/942/942748.png">
 </head>
 <body>
     <header class="site-header">
